<resources>
    <string name="app_name">Aplikasi Pencatatan Kesehatan Kota Malang</string>
    <string name="MAP_KEY">AIzaSyCl2YVJu39hvebJEp9Nc9VO8RQNVADpop4</string>
    <string name="dinas_kesehatan_kota_malang">Dinas Kesehatan Kota Malang</string>
    <string name="pencatatan_kesehatan">Pencatatan Kesehatan</string>
    <string name="sistem_informasi">Sistem Informasi</string>
    <string name="logo">logo</string>
    <string name="Kecamatan">Kecamatan</string>
    <string name="KecamatanText">Kecamatan:</string>
    <string name="masukkan_data">Masukkan Data Kesehatan</string>
    <string name="nama_yang_sakit">Nama Keluarga:</string>
    <string name="Kecamatan_A">Kalecamatan</string>
    <string name="Kelurahan">Kelurahan:</string>
    <string name="Alamat">Alamat Keluarga:</string>
    <string name="status">Status:</string>
    <array name="listStatus">
        <item>Sehat</item>
        <item>Pra Sehat</item>
        <item>Tidak Sehat</item>
    </array>
    <string name="jenisStatus">Sehat atau Prasehat atau Sakit</string>
    <string name="keterangan">Keterangan:</string>
    <string name="simpan">Simpan</string>
    <string name="template_kelurahan_x">Template Kelurahan X</string>
    <string name="logindisini"><u>Login disini!</u></string>
    <string name="daftardisini"><u>Daftar disini!</u></string>
</resources>
