<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/overviewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#9fdf9f"
        android:layout_marginTop="0dp">
        <ImageView
            android:id="@+id/logo"
            android:src="@drawable/baktihusada"
            android:layout_height="120dp"
            android:layout_width="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/sisinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/putih"
            android:text="@string/sistem_informasi"
            android:textSize="23sp" />


        <TextView
            android:id="@+id/pencatatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/putih"
            android:text="@string/pencatatan_kesehatan"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/dinkes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/dinas_kesehatan_kota_malang"
            android:textColor="@color/putih"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/masukkan_data"
            android:gravity="center"

            android:textAlignment="center"
            android:background="#339933"
            android:textColor="@color/putih"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/namaKeluarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_yang_sakit"
                android:textColor="@color/hitam"
                android:textSize="15sp"
                android:paddingBottom="5dp"/>

            <EditText
                android:id="@+id/inputNamaKeluarga"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:hint="Nama Kepala Keluarga"
                android:layout_below="@id/namaKeluarga"
                android:background="@android:drawable/editbox_dropdown_light_frame"/>

            <TextView
                android:id="@+id/kecamatan"
                android:layout_below="@id/inputNamaKeluarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/KecamatanText"
                android:textColor="@color/hitam"
                android:textSize="15sp"
                android:paddingBottom="5dp"/>

            <Spinner
                android:id="@+id/spnKecamatan"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:layout_below="@id/kecamatan"
                android:entries="@array/kecamatan_array"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:prompt="@string/Kecamatan_A" />

            <TextView
                android:id="@+id/kelurahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Kelurahan"
                android:layout_below="@id/spnKecamatan"
                android:textColor="@color/hitam"
                android:textSize="15sp"
                android:paddingBottom="5dp"
                android:layout_marginTop="15dp"/>

            <Spinner
                android:id="@+id/spnKelurahan"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:layout_below="@id/kelurahan"
                android:entries="@array/kelurahan_array"
                android:background="@android:drawable/editbox_dropdown_light_frame"/>

            <TextView
                android:id="@+id/Alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Alamat"
                android:layout_below="@id/spnKelurahan"
                android:textColor="@color/hitam"
                android:textSize="15sp"
                android:paddingBottom="5dp"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/inputAlamat"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:layout_below="@id/Alamat"
                android:hint="Alamat lokasi keluarga"

                android:background="@android:drawable/editbox_dropdown_light_frame"/>

            <TextView
                android:id="@+id/status"
                android:layout_below="@id/inputAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/hitam"
                android:textSize="15sp"
                android:paddingBottom="5dp"
                android:layout_marginTop="15dp"/>

            <Spinner
                android:id="@+id/spnStatus"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:layout_below="@id/status"
                android:entries="@array/listStatus"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:prompt="@string/jenisStatus" />

            <TextView
                android:id="@+id/ket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/keterangan"
                android:layout_below="@id/spnStatus"
                android:textColor="@color/hitam"
                android:textSize="15sp"
                android:paddingBottom="5dp"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/inputKeterangan"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:layout_below="@id/ket"
                android:hint="Keterangan terkait data kesehatan"
                android:background="@android:drawable/editbox_dropdown_light_frame"/>

            <Button
                android:id="@+id/buttonSimpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputKeterangan"
                android:layout_marginTop="18dp"
                android:background="@drawable/buttonmenu"
                android:gravity="center"
                android:text="@string/simpan"
                android:textColor="@color/putih" />

        </RelativeLayout>

    </ScrollView>


</LinearLayout>