<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/overviewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#9fdf9f"
        android:layout_marginTop="0dp">
        <ImageView
            android:id="@+id/logo"
            android:src="@drawable/baktihusada"
            android:layout_height="120dp"
            android:layout_width="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/sisinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#fff"
            android:text="@string/sistem_informasi"
            android:textSize="23dp" />


        <TextView
            android:id="@+id/pencatatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#fff"
            android:text="@string/pencatatan_kesehatan"
            android:textSize="23dp" />

        <TextView
            android:id="@+id/dinkes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/dinas_kesehatan_kota_malang"
            android:textColor="#fff"
            android:textSize="15dp" />

    </RelativeLayout>

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/back"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/kecamatan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/Kecamatan"
                        android:textSize="30sp"
                        android:textColor="#fff"/>

                </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</LinearLayout>