<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_umum">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#9fdf9f"
        android:layout_marginTop="0dp">
        <ImageView

            android:src="@drawable/baktihusada"
            android:layout_height="120dp"
            android:layout_width="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#fff"
            android:text="Sistem Informasi"
            android:textSize="23sp" />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#fff"
            android:text="Pencatatan Kesehatan"
            android:textSize="23sp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="120dp"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-medium"
            android:text="Dinas Kesehatan Kota Malang"
            android:textColor="#fff"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lihat_profil_keluarga"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:background="#339933"
        android:orientation="vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="348dp"
            android:src="@drawable/arrowback" />

        <TextView
            android:id="@+id/lihatdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="PROFIL KELUARGA"
            android:textColor="#fff"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/detail_keluarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/hitam"
        android:text="Detail Profil" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="30dp"
            app:card_viewcardElevation="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/namaKeluarga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/nama_yang_sakit"
                    android:textColor="@color/hitam"
                    android:textStyle="bold"
                    android:textSize="15sp" />

                <!--isi nama-->
                <TextView
                    android:id="@+id/isi_nama_keluarga"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/namaKeluarga"
                    android:hint="Nama Kepala Keluarga"
                    android:padding="10dp"
                    android:background="@android:drawable/editbox_dropdown_light_frame"/>

                <TextView
                    android:id="@+id/kecamatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/isi_nama_keluarga"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/KecamatanText"
                    android:textColor="@color/hitam"
                    android:textStyle="bold"
                    android:textSize="15sp" />

                <!--isi kecamatan-->
                <TextView
                    android:id="@+id/isi_kecamatan"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/kecamatan"
                    android:hint="Kecamatan Lowokwaru"
                    android:padding="10dp"
                    android:background="@android:drawable/editbox_dropdown_light_frame"/>


                <TextView
                    android:id="@+id/kelurahan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/isi_kecamatan"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="5dp"
                    android:textStyle="bold"
                    android:text="@string/Kelurahan"
                    android:textColor="@color/hitam"
                    android:textSize="15sp" />

                <!--isi kelurahan-->
                <TextView
                    android:id="@+id/isi_kelurahan"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/kelurahan"
                    android:hint="Kelurahan Jatimulyo"
                    android:padding="10dp"
                    android:background="@android:drawable/editbox_dropdown_light_frame"/>

                <TextView
                    android:id="@+id/alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/isi_kelurahan"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/Alamat"
                    android:textStyle="bold"
                    android:textColor="@color/hitam"
                    android:textSize="15sp" />

                <!--isi alamat-->
                <TextView
                    android:id="@+id/isi_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/alamat"
                    android:hint="Perum Griya Shanta"
                    android:padding="10dp"
                    android:background="@android:drawable/editbox_dropdown_light_frame"/>

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/isi_alamat"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/status"
                    android:textStyle="bold"
                    android:textColor="@color/hitam"
                    android:textSize="15sp" />

                <!--isi statuts-->
                <TextView
                    android:id="@+id/isi_status"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/status"
                    android:hint="Sehat dong"
                    android:padding="10dp"
                    android:background="@android:drawable/editbox_dropdown_light_frame"/>

                <TextView
                    android:id="@+id/ket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/isi_status"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/keterangan"
                    android:textStyle="bold"
                    android:textColor="@color/hitam"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/isi_ket"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/ket"
                    android:hint="Sehat dong"
                    android:padding="10dp"
                    android:background="@android:drawable/editbox_dropdown_light_frame"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="30dp"
            app:card_viewcardElevation="16dp">

            <com.google.android.gms.maps.MapView
                android:id="@+id/map_keluarga"
                android:layout_width="350dp"
                android:layout_height="200dp"/>
        </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>